#ifndef FIGURE_TYPE_H
#define FIGURE_TYPE_H

enum class FigureType {
    KING,
    QUEEN,
    ROOK,
    KNIGHT,
    BISHOP,
    PAWN
};

#endif